--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "e-_-comerce-backend",
+  "name": "e-comerce-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "nodemon server.js"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "author": "",
   "license": "ISC",
